# CppMethodOrderChecker

./: .clang-format  CMakeLists.txt  README.md  run_clang_format.py  run_static_analysis.sh
exe/: CMakeLists.txt  main.cpp
lib/: CMakeLists.txt  analyzer.cpp  analyzer.hpp  commonparsing.cpp  commonparsing.hpp  headerparser.cpp  headerparser.hpp  sourceparser.cpp  sourceparser.hpp  utils.cpp  utils.hpp
unit_tests/: CMakeLists.txt  test_common_parsing.cpp  test_header_parser.cpp  test_source_parser.cpp  test_utils.cpp
